Pull up following revision(s) (requested by yamaguchi in ticket #417):

sys/dev/pci/if_ixl.c: revision 1.94
	sys/dev/pci/if_ixl.c: revision 1.95

ixl(4): added ETHERCAP_VLAN_MTU support
PR kern/57652

ixl(4): limit receive frame size upto 9600 even if ETHERCAP_VLAN_MTU is enabled